2001-07-10  Lance Levsen  <lance@iworks.pwgroup.ca>

	* man/man8/papd.8.tmpl: Fixed ftp URI for Adobe's PPD files.
	
2001-06-30  andy m  <morgan@orst.edu>

	* etc/papd/ppd.c: "unquote" ppd values by removing leading
	and trailing quote character. This should fix bug #426141.

2001-06-27  jeff b  <jeff@univrel.pr.uconn.edu>

	* many, many, files: more malformed ifdef correction, nicer
	comments, etc, etc, etc

	* etc/afpd/directory.c, etc/afpd/uid.c, etc/afpd/uid.h: fixes
	for force-uidgid to compile properly. haven't tested it, but
	no more compile errors. (Jeff)

2001-06-27  uwe hees <hees@viva.de>

	* etc/uams/uams_guest.c: fixed a typo.

2001-06-26  andy m  <morgan@orst.edu>

	* etc/papd/file.c: modified markline() to return 1 instead
	of *linelength for successful completion. This should fix
	the remaining binary printing problems in papd.  Thanks go
	out to Dave Arnold <darn0ld@home.com> for getting me thinking
	about the markline function.

2001-06-25  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/auth.c, etc/afpd/main.c, etc/afpd/uam.c,
	etc/uams/uams_dhx_passwd.c, etc/uams/uams_passwd.c,
	include/atalk/uam.h: TRU64 authentication patch to allow
	any security scheme to be used on the TRU64 side (Burkhard
	Schmidt)

	* etc/afpd/uam.c, etc/papd/uam.c: fixed DISABLE_SHELLCHECK
	support in both afpd and papd (Jason Keltz <jas@cs.yorku.ca>)

	* etc/*/*.{c,h}: corrected malformed defines, nicer comments,
	CVS Id tags

2001-06-20  jeff b  <jeff@univrel.pr.uconn.edu>

	* configure.in: check for linux/quota.h before enabling
	QUOTACTL_WRAPPER (Joe Clarke) 

	* acconfig.h, configure.in, include/atalk/util.h,
	libatalk/util/module.c: removed NO_DLFCN_H in favor of
	ifndef HAVE_DLFCN_H (Jeff)

	* configure.in, etc/afpd/*.{c,h}, include/atalk/util.h:
	major autoconf fixes for afpd, nicer commenting, etc (Jeff)

2001-06-19  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/file.c, etc/afpd/parse_mtab.c, etc/afpd/parse_mtab.h,